Fixing spacing
Fixing spacing on press releases page

--- a/assets/css/press.css
+++ b/assets/css/press.css
@@ -36,7 +36,7 @@ img{
 
 .blog-title{
   text-align: left;
-  margin-top: -0.5vh;
+  margin-top: -1vh;
   margin-bottom: 2.5vh !important;
   padding-left:0;
   padding-right: 0 !important;
